src/objects/DRE__DREEditorSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customizes DRE/DTE editors</description>
    <fields>
        <fullName>DRE__Enable_Inner_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected the DRE Rule Editor will show a secondary scoping method under Actions by which you can perform nested repeats over children or global records</description>
        <inlineHelpText>If selected the DRE Rule Editor will show a secondary scoping method under Actions by which you can perform nested repeats over children or global records</inlineHelpText>
        <label>Enable Inner Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Enable_Quick_Entry_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected the Editors will switch to a data entry based layout. For example the field dropdown list no longer shows</description>
        <inlineHelpText>If selected the Editors will switch to a data entry based layout. For example the field dropdown list no longer shows</inlineHelpText>
        <label>Enable Quick Entry Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Show_API_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected the Editors will show API names for objects and fields instead of their labels</description>
        <inlineHelpText>If selected the Editors will show API names for objects and fields instead of their labels</inlineHelpText>
        <label>Show API Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Show_DRE_Objects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected the DRE Rule Editor will display DRE/DTE objects (including the packaged ones). Also the DRE Config page will make certain DRE/DTE objects available for enabling (the packaged triggers are already enabled and cannot be configured)</description>
        <label>Show DRE Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Show_Tooltips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Tooltips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Theme_Version__c</fullName>
        <defaultValue>1.0</defaultValue>
        <label>Theme Version</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>DRE Editor Settings</label>
</CustomObject>